--- a/src/express/templates/general/layout.pug
+++ b/src/express/templates/general/layout.pug
@@ -17,11 +17,11 @@ html(lang="ru")
     title Куплю Продам
     link(
       rel="stylesheet"
-      href="css/style.min.css"
+      href="/css/style.min.css"
       type="text/css"
     )
   include header.pug
   block content
   include footer.pug
-  script(src='js/vendor.js')
-  script(src='js/main.js')
+  script(src='/js/vendor.js')
+  script(src='/js/main.js')
